--- a/src/popup.css
+++ b/src/popup.css
@@ -1,4 +1,11 @@
 
+@media (prefers-color-scheme: dark) {
+  body {
+    background-color: #1f1f1f;
+    color: #e3e3e3;
+  }
+}
+
 ul {
   padding-left: 0;
   list-style: none;
